--- a/Proverbs/www/Languages/English.html
+++ b/Proverbs/www/Languages/English.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../css/index.css" />
         <title>English Proverbs</title>
     </head>
-    <body>
+    <body onload="app.showBannerAds()">
                 <p class="backButton">
                    <a href="../index.html" class="backButton">< Go Back</a>
                 </p>
@@ -215,5 +215,9 @@
                 <h3 class='proverbTitle'>"If you want something done right, you have to do it yourself."</h3>
                 Don't trust other people to do important things for you. You have to do things yourself to control the quality of the results.<br>
                 </li>
+
+        <script type="text/javascript" src="cordova.js"></script>
+        <!--<script type="text/javascript" src="js/index.js"></script>-->
+        <script type="text/javascript" src="js/Admob.js"></script>
     </body>
 </html>
