--- a/Proverbs/www/index.html
+++ b/Proverbs/www/index.html
@@ -29,7 +29,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Proverbs</title>
     </head>
-    <body>
+    <body onload="app.showBannerAds()">
         <div>
             <span>Select a language</span>
             <a href="Languages/English.html" class="langOption"><h1 class="selectLanguage">English</h1></a>
@@ -38,7 +38,8 @@
             <a href="Languages/Spanish.html" class="langOption"><h1 class="selectLanguage">Spanish</h1></a>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <!--<script type="text/javascript" src="js/index.js"></script>-->
+        <script type="text/javascript" src="js/Admob.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
