--- a/Proverbs/www/Languages/English.html
+++ b/Proverbs/www/Languages/English.html
@@ -9,8 +9,10 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="../css/index.css" />
         <title>English Proverbs</title>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="../js/Admob.js"></script>
     </head>
-    <body onload="app.showBannerAds()">
+    <body onload="">
                 <p class="backButton">
                    <a href="../index.html" class="backButton">< Go Back</a>
                 </p>
@@ -216,8 +218,7 @@
                 Don't trust other people to do important things for you. You have to do things yourself to control the quality of the results.<br>
                 </li>
 
-        <script type="text/javascript" src="cordova.js"></script>
         <!--<script type="text/javascript" src="js/index.js"></script>-->
-        <script type="text/javascript" src="js/Admob.js"></script>
+
     </body>
 </html>
