--- a/Proverbs/www/index.html
+++ b/Proverbs/www/index.html
@@ -27,9 +27,12 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <script type="text/javascript" src="cordova.js"></script>
+        <!--<script type="text/javascript" src="js/index.js"></script>-->
+
         <title>Proverbs</title>
     </head>
-    <body onload="app.showBannerAds()">
+    <body>
         <div>
             <span>Select a language</span>
             <a href="Languages/English.html" class="langOption"><h1 class="selectLanguage">English</h1></a>
@@ -37,11 +40,10 @@
             <a href="Languages/German.html" class="langOption"><h1 class="selectLanguage">German</h1></a>
             <a href="Languages/Spanish.html" class="langOption"><h1 class="selectLanguage">Spanish</h1></a>
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <!--<script type="text/javascript" src="js/index.js"></script>-->
-        <script type="text/javascript" src="js/Admob.js"></script>
+
         <script type="text/javascript">
             app.initialize();
         </script>
+        <script type="text/javascript" src="js/Admob.js"></script>
     </body>
 </html>
