--- a/Proverbs/www/index.html
+++ b/Proverbs/www/index.html
@@ -36,7 +36,9 @@ button {
 <script>
 
 </script>
-	<div id="fullpage">
+<div id="fullpage">
+		<p>Demo for AdMob Plugin</p>
+
         <div>
             <span>Select a language</span>
             <a href="Languages/English.html" class="langOption"><h1 class="selectLanguage">English</h1></a>
