--- a/Proverbs/www/Languages/English.html
+++ b/Proverbs/www/Languages/English.html
@@ -12,7 +12,7 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="../js/Admob.js"></script>
     </head>
-    <body onload="">
+    <body onload="onLoad()" onresize="onResize()">
                 <p class="backButton">
                    <a href="../index.html" class="backButton">< Go Back</a>
                 </p>
